usage/tests/fails/accidental_custom_field.stderr
error: Unknown cache_diff attribute: `custom`. Must be one of `rename`, `display`, `ignore`
 --> tests/fails/accidental_custom_field.rs:5:18
  |
5 |     #[cache_diff(custom = function)]
  |                  ^^^^^^

error:
       The cache_diff attribute `custom` is available on the struct, not the field
 --> tests/fails/accidental_custom_field.rs:5:18
  |
5 |     #[cache_diff(custom = function)]
  |                  ^^^^^^
